samples/_failures_safe/1761092359_ab9130_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff2239f8.c: In function ‘main’:
./samples/SAFE/__tmp_ff2239f8.c:173:5: error: expected expression at end of input
  173 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_ff2239f8.c:173:5: error: expected declaration or statement at end of input
